# FLARE-BB

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  CNAME  DEVELOPMENT.md  LICENSE  README.md  changelog.html  contributing.html  development.html  genindex.html  index.html  kde_workflow.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js
.cursor/rules/: python-terminal.mdc
.doctrees/: changelog.doctree  contributing.doctree  development.doctree  index.doctree  kde_workflow.doctree
.doctrees/api/: bayesian_blocks.doctree  data_processing.doctree  scripts.doctree  simulation.doctree  utils.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/data_processing/: caching.html
_sources/: changelog.rst.txt  index.rst.txt
_sources/api/: bayesian_blocks.rst.txt  data_processing.rst.txt
api/: bayesian_blocks.html  data_processing.html  scripts.html  simulation.html  utils.html
docs/: Makefile  README.md  conf.py  contributing.rst  development.rst  index.rst  kde_workflow.rst  make.bat
docs/_static/: custom.css
docs/_templates/: .gitkeep
docs/api/: data_processing.rst  scripts.rst  simulation.rst  utils.rst
scripts/: README.md  build_docs.py  check_license_headers.py  demo_kde_filenames.py  generate_kde.py  kde_data_example.py
src/: __init__.py
src/bayesian_blocks/: __init__.py
src/data_processing/: __init__.py  caching.py  downloader.py  kde_generator.py  kde_utils.py
src/simulation/: __init__.py
src/utils/: __init__.py
